--- a/client/css/clientItem.css
+++ b/client/css/clientItem.css
@@ -85,3 +85,20 @@
     margin-right: 32px;
     background-image: url(../img/redCandel.svg);
 }
+.contacts__link{
+    position: relative;
+    width: 16px;
+    height: 16px;
+    margin-bottom: 7px;
+}
+.contacts__link g,
+.contacts__link path {
+    transition: opacity .3s ease-in-out;
+}
+.contacts__link:hover g,
+.contacts__link:hover path {
+    opacity: 1;
+}
+.contacts__link:not(:last-child){
+    margin-right: 7px;
+}
