--- a/client/css/clientsSection.css
+++ b/client/css/clientsSection.css
@@ -114,6 +114,9 @@
     transition: fill 0.3s ease-in-out;;
     fill: var(--color-emerald);
 }
+.clients__tbody{
+    position: relative;
+}
 
 .clients__btn:hover {
     background-color: var(--color-emerald);
