--- a/client/css/modal.css
+++ b/client/css/modal.css
@@ -190,3 +190,14 @@
     border-bottom: 1px solid var(--color-black3);
     color: var(--color-black3);
 }
+.modal__error{
+    line-height: 14px;
+    font-size: 10px;
+    text-align: center;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    margin: -17px 0 10px;
+    max-width: 255px;
+    color: var(--color-burnt-sienna)
+}
