--- a/client/css/preloader.css
+++ b/client/css/preloader.css
@@ -6,7 +6,7 @@
     z-index: 100;
     top: 0;
     left: 0;
-    height: 300px;
+    height: 100%;
     width: 100%;
     background-color: var(--color-white);
 }
