--- a/client/css/clientItem.css
+++ b/client/css/clientItem.css
@@ -78,11 +78,13 @@
     color: var(--color-black3);
 }
 .clients__edit {
+    position: relative;
     margin-right: 32px;
     background-image: url(../img/pencil.svg);
     transition: color .3s ease-in-out;
 }
 .clients__delete {
+    position: relative;
     margin-right: 32px;
     background-image: url(../img/redCandel.svg);
     transition: color .3s ease-in-out;
@@ -109,4 +111,39 @@
 }
 .contacts__link:not(:last-child){
     margin-right: 7px;
+}
+
+.action-wait {
+    background-image: none;
+}
+
+.actions__spinner {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: spinner .3s ease-in-out;
+    animation-duration: 1s;
+    animation-iteration-count:infinite;
+    animation-timing-function:linear;
+}
+
+.clients__edit .actions__spinner svg {
+    stroke: var(--color-emerald);
+    fill: none;
+}
+
+.clients__delete .actions__spinner svg {
+    stroke: var(--color-burnt-sienna);
+    fill: none;
+}
+
+@keyframes spinner {
+    0%{
+        transform:rotate(0deg)
+    }
+
+    100%{
+        transform:rotate(360deg)
+    }
 }
