--- a/client/css/deleteModal.css
+++ b/client/css/deleteModal.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-width: 335px;
 }
 .delete-modal__title{
     margin-bottom: 11px;
